# recurrence-mimicking-learning

./: .gitignore  CITATION.cff  LICENSE  README.md  config.py  experiment.py  experiment_time.py  install.sh  pyproject.toml
src/: get_data.py  model.py  rml_model.py  train.py  utils.py
