[tool.poetry]
name = "recurrence-mimicking-learning"
version = "0.1.0"
description = "Recurrence Mimicking Learning experiments"
authors = ["tomasz.witkowski1@edu.uekat.pl"]

[tool.poetry.dependencies]
python = "3.9.12"
tensorflow = "==2.9.1"  
pandas = "==1.4.2"
numpy = "==1.21.4"
tqdm = "~4.67.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"